# whole-body-controllers

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md
utilities/homePositions/robots/: CMakeLists.txt
utilities/homePositions/robots/bigman/: CMakeLists.txt  homePoseBalancing.ini  homePoseCalib.ini  homePoseYogaPP.ini  torqueBalancing.ini
utilities/homePositions/robots/bigman_only_legs/: CMakeLists.txt  homePoseBalancing.ini  homePoseYogaPP.ini  torqueBalancing.ini
utilities/homePositions/robots/iCubDarmstadt01/: CMakeLists.txt  homePoseBalancingHeadTorsoLegsZero.ini  homePoseBalancingLeftFoot.ini  homePoseBalancingLegsZero.ini  homePoseBalancingTorsoHeadZero.ini  homePoseBalancingTwoFeet.ini  homePoseFineCalibration.ini  homePoseWholeBodyImpedance.ini  homePoseYogaPP.ini  oneFootBalancingGains.ini  torqueBalancingLeftFoot.ini  torqueBalancingTwoFeet.ini
utilities/homePositions/robots/iCubGazeboV2_5/: CMakeLists.txt  homePoseBalancing.ini
utilities/homePositions/robots/iCubGazeboV2_5_plus/: CMakeLists.txt  homePoseBalancing.ini
utilities/homePositions/robots/iCubGazeboV3/: CMakeLists.txt  homePoseBalancing.ini
utilities/homePositions/robots/iCubGenova01/: CMakeLists.txt  homePoseBalancingLeftFoot.ini  homePoseBalancingRedBall.ini  homePoseBalancingTwoFeet.ini  homePoseFineCalibration.ini  homePoseWalking.ini  torqueBalancingLeftFoot.ini  torqueBalancingLeftFootYoga.ini  torqueBalancingTwoFeet.ini
utilities/homePositions/robots/iCubGenova02/: CMakeLists.txt  homePoseBalancing.ini  homePoseBalancingChair.ini  homePoseBalancingLegsZero.ini  (+4 more)
(+490 files in other folders)
