set(ROBOT_NAME "$ENV{YARP_ROBOT_NAME}" CACHE PATH
    "Name of your robot")

set(ROBOT_DIR "${CMAKE_CURRENT_SOURCE_DIR}/${ROBOT_NAME}")

# If no env variable YARP_ROBOT_NAME is defined
if(WBC_INSTALL_ALL_HOME_POS)
  add_subdirectory(bigman)
  add_subdirectory(bigman_only_legs)
  add_subdirectory(iCubGenova01)
  add_subdirectory(iCubGenova02)
  add_subdirectory(iCubGenova03)
  add_subdirectory(iCubGenova04)
  add_subdirectory(iCubGenova05)
  add_subdirectory(iCubParis01)
  add_subdirectory(iCubParis02)
  add_subdirectory(iCubHeidelberg01)
  add_subdirectory(icubGazeboSim)
  add_subdirectory(iCubDarmstadt01)
  add_subdirectory(iCubNancy01)
  add_subdirectory(iCubGazeboV2_5_plus)
  add_subdirectory(iCubGazeboV2_5)
  add_subdirectory(iCubGazeboV3)
  add_subdirectory(iCubGenova09)
else()
  if(ROBOT_NAME)
    add_subdirectory(${ROBOT_NAME})
  endif()
endif()
